syntax = "proto3";

package practice;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc Greet (GreetRequest) returns (GreetReply) {}
  
  // Sends another greeting
  rpc GreetAgain (GreetRequest) returns (GreetReply) {}
}

// The request message containing the user's name.
message GreetRequest {
  string name = 1;
}

// The response message containing the greetings
message GreetReply {
  string message = 1;
}
